2009-01-07  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (hildon_app_menu_set_parent_window)
	(hildon_app_menu_finalize): When a window is hidden it doesn't
	emit notify::is-topmost, so make sure than the menu also
	disappears in that case.
	(parent_window_topmost_notify): Renamed from parent_window_hidden

	Fixes: NB#94460 (stackable window's menu is not closed when its
	window is hidden)

2009-01-07  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector-entry.c:
	(+hildon_touch_selector_entry_set_input_mode),
	(+hildon_touch_selector_entry_get_input_mode):
	* src/hildon-touch-selector-entry.h: New methods to access the input
	mode in the selector's entry.

	Fixes: NB#93410 (API required for setting IM mode in
	HildonTouchSelectorEntry)

2009-01-07  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump.
	* debian/changelog: version bump

2009-01-07  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.34]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2008-12-19  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c:
	(_hildon_touch_selector_has_multiple_selection): No need
	to initialize the variables here.

2008-12-17  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-note-private.h
	* src/hildon-note.c (event_box_press_event, hildon_note_init)
	(hildon_note_finalize, hildon_note_rebuild): Close information
	notes when they receive a button press.

	Fixes: NB#89890 (Information notes does not get disappeared after
	few seconds)

2008-12-17  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-wizard-dialog.c: (create_title): Remove translation
	mark from the wizard title, as it's not really necessary. Also,
	do not display the page title if not set.

2008-12-17  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (hildon_app_menu_set_parent_window)
	(parent_window_hidden): Use the window's "is-topmost" property to